--- a/Kobe.dev/src/css/ComponentsCss/Top5Section.css
+++ b/Kobe.dev/src/css/ComponentsCss/Top5Section.css
@@ -6,9 +6,10 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  column-gap: 2%;
   padding: 0 40px;
   width: 95%;
-  height: 50vh;
+  height:500px;
   padding-top:10%;
   background-color: #000000;
 }
@@ -30,6 +31,10 @@
   background: #1f1f1f;
 }
 
+.titleSection{
+  display: flex;
+  justify-content: space-evenly;
+}
 
 .bubble-img:hover{
   filter: grayscale() blur(2px) brightness(50%);
@@ -109,7 +114,7 @@
   
   width: 100%;
   max-width: 45%;
-  max-height: 100%;
+  min-height: 100%;
   margin: 0 auto;
 }
 
@@ -254,7 +259,7 @@
   padding-right: 0.5rem;
 
   /* Make the list scrollable */
-   max-height: 36vh;
+  max-height: 36vh;
   min-height: 100%; /* remove large vertical stretch */
   overflow-y: auto;
   overflow-x: hidden;
