--- a/Kobe.dev/src/css/ComponentsCss/modelingAndPhoto.css
+++ b/Kobe.dev/src/css/ComponentsCss/modelingAndPhoto.css
@@ -15,7 +15,7 @@
   font-weight: 600;
   margin-bottom: 1.5rem;
   text-align: left;
-  border-bottom: 2px solid #ccc;
+  
   padding-bottom: 0.5rem;
   letter-spacing: 1px;
   color: #fff;
